apps/staging/service-demo-2/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-demo-2
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: service-demo-2
        image: reg.garrytest.com/demo/service-demo-2:tag # {"$imagepolicy": "flux-system:ns-staging-service-demo-2"}
      imagePullSecrets:
      - name: regkey
